# libuct

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: cnn_v1_test.cpp  uct_test.cpp
src/uct/: uct.cpp  uct.hpp
src/uct/detail/: cnn_v1.hpp  tree.hpp  uct_algo.hpp
